--- a/app/assets/stylesheets/shard/_signups_errors.scss
+++ b/app/assets/stylesheets/shard/_signups_errors.scss
@@ -1,8 +1,8 @@
-.signups_errors{
-  &__error{
-    font-size: 13px;
+.signups_errors {
+  &__error {
+    font-size: 1.3rem;
     color: red;
-    margin-top: 5px;
+    margin-top: 0.5rem;
     line-height: 1.5;
   }
 }
