--- a/app/views/mypages/_listings.html.haml
+++ b/app/views/mypages/_listings.html.haml
@@ -65,7 +65,7 @@
                 %span.listings__selling_status
                   出品中
 
-          - if url.match(/\/listings\/.*in_proress.*/)
+          - if url.match(/\/listings\/.*in_progress.*/)
             .listings-report-areas-exsis__area__link__item__detail
               %span.listings-report-areas-exsis__area__link__item__detail__icon
                 %i.far.fa-heart
