--- a/app/assets/stylesheets/addresses/new.scss
+++ b/app/assets/stylesheets/addresses/new.scss
@@ -31,12 +31,12 @@
 }
 .point3-4 {
   @include inpoint;
-&::after {
-  @include after;
-}
-&::before {
-  @include before;
-}
+  &::after {
+    @include after;
+  }
+  &::before {
+    @include before;
+  }
 }
 .point3-5 {
   @include inpoint;
@@ -46,27 +46,27 @@
 }
 
 .user_address {
-  margin-left: 77px;
-  margin-right: 77px;
+  margin-left: 7.7rem;
+  margin-right: 7.7rem;
 }
 
 .field-address {
-  line-height: 20px;
-  margin-top: 40px;
+  line-height: 2rem;
+  margin-top: 4rem;
 }
 
 .field_submit {
   @extend .field-address;
-  margin-bottom: 40px;
+  margin-bottom: 4rem;
 }
 
 .nin {
   background-color: #ccc;
-  margin: 0 0 0 8px;
-  padding: 2px 4px;
-  border-radius: 2px;
+  margin: 0 0 0 0.8rem;
+  padding: 0.2rem 0.4rem;
+  border-radius: 0.2rem;
   color: #fff;
-  font-size: 12px;
+  font-size: 1.2rem;
   vertical-align: top;
 }
 
@@ -88,17 +88,16 @@
 .address_user_lastname_kana,
 .address_user_firstname_kana,
 .address_user_lastname_kana_error,
-.address_user_firstname_kana_error
- {
-  height: 34px;
-  width: 240px !important;
-  padding: 10px 16px 8px;
-  margin: 5px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
+.address_user_firstname_kana_error {
+  height: 3.4rem;
+  width: 24rem !important;
+  padding: 1rem 1.6rem 0.8rem;
+  margin: 0.5rem;
+  border-radius: 0.4rem;
+  border: 0.1rem solid #ccc;
   background: #fff;
-  line-height: 1.5;
-  font-size: 16px;
+  line-height: 1.5rem;
+  font-size: 1.6rem;
   display: inline-block;
 }
 
@@ -107,15 +106,15 @@
 #address_street_num,
 #address_building,
 #address_home_call_num {
-  height: 48px;
-  width: 500px;
-  padding: 10px 16px 8px;
-  margin: 5px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
+  height: 4.8rem;
+  width: 50rem;
+  padding: 1rem 1.6rem 0.8rem;
+  margin: 0.5rem;
+  border-radius: 0.4rem;
+  border: 0.1rem solid #ccc;
   background: #fff;
-  line-height: 1.5;
-  font-size: 16px;
+  line-height: 1.5rem;
+  font-size: 1.6rem;
   display: block;
 }
 
@@ -128,21 +127,21 @@
 #address_street_num_error,
 #address_building_error,
 #address_home_call_num_error {
-  height: 48px;
-  width: 500px;
-  padding: 10px 16px 8px;
-  margin: 5px;
-  border-radius: 4px;
-  border: 1px solid red;
+  height: 4.8rem;
+  width: 50rem;
+  padding: 1rem 1.6rem 0.8rem;
+  margin: 0.5rem;
+  border-radius: 0.4rem;
+  border: 0.1rem solid red;
   background: #fff;
-  line-height: 1.5;
-  font-size: 16px;
+  line-height: 1.5rem;
+  font-size: 1.6rem;
   display: block;
 }
 
 #address_prefectures {
   @include address_select;
-  border-radius: 4px;
+  border-radius: 0.4rem;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -154,9 +153,9 @@
 }
 .address_icon {
   position: absolute;
-  right: 30px;
-  top: 15px;
-  font-size: 26px;
+  right: 3rem;
+  top: 1.5rem;
+  font-size: 2.6rem;
 }
 
 #address_prefectures::-ms-expand {
@@ -168,15 +167,14 @@
 }
 .address_icon {
   position: absolute;
-  right: 50px;
-  top: 15px;
-  font-size: 26px;
+  right: 5rem;
+  top: 1.5rem;
+  font-size: 2.6rem;
 }
 
 #address_prefectures::-ms-expand {
   display: none;
 }
-
 
 .address_submit {
   @include address_select;
@@ -186,11 +184,11 @@
 
 .destory_wall {
   background-color: #fff;
-  height: 1px;
+  height: 0.1rem;
   width: 100%;
 }
 
 .footer {
-  height: 50px;
+  height: 5rem;
   width: 100%;
 }
