--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,11 +12,10 @@
  *
  *= require_self
  *= require dropzone/basic
- *= require dropzone/dropzone  
+ *= require dropzone/dropzone
  */
 
-
- // config
+// config
 @import "config/reset";
 @import "config/colors";
 @import "config/font-size";
@@ -39,14 +38,12 @@
 @import "mypages/purchase_purchased.scss";
 
 //signupus
-@import "signups/signup.scss";
 @import "signups/step1.scss";
 @import "signups/step2.scss";
 @import "signups/done.scss";
 @import "signups/header.scss";
 @import "signups/index.scss";
 @import "signups/footer.scss";
-@import "signups/step1.scss";
 
 //addresses
 @import "addresses/new.scss";
@@ -63,20 +60,8 @@
 //orders
 @import "orders/new.scss";
 
+//items
+@import "items/sell";
+
 //その他
 @import "shard/signups_errors";
-@import 'addresses/new.scss';
-@import 'creditcards/new.scss';
-@import 'signups/done.scss';
-@import 'signups/header.scss';
-@import 'signups/index.scss';
-@import 'addresses/new.scss';
-@import 'devise/sessions/new';
-@import 'devise/sessions/new';
-@import 'signups/footer.scss';
-@import 'signups/step1.scss';
-@import 'addresses/new.scss';
-@import 'creditcards/new.scss';
-@import "mypages/identification";
-@import "signups/signup.scss";
-@import "items/sell";
