--- a/app/assets/stylesheets/items/sell.scss
+++ b/app/assets/stylesheets/items/sell.scss
@@ -1,69 +1,69 @@
-.sell-header{
+.sell-header {
   text-align: center;
-  height: 128px;  
-  &__link{
+  height: 12.8rem;
+  &__link {
     display: inline-block;
-    width: 185px;
-    margin-top: 40px;
+    width: 18.5rem;
+    margin-top: 4rem;
   }
-    &--logo{
-      padding-top: 40px;
-    }
+  &--logo {
+    padding-top: 4rem;
   }
+}
 
-.sell-main{
-  width: 700px;
+.sell-main {
+  width: 70rem;
   margin: 0 auto;
   background: #fff;
-  .sell-head{
+  .sell-head {
     text-align: center;
-    font-size: 22px;
-    padding: 32px 16px;
-    border-bottom: 1px solid #f5f5f5;
-    line-height:1.5;
+    font-size: 2.2rem;
+    padding: 3.2rem 1.6rem;
+    border-bottom: 0.1rem solid #f5f5f5;
+    line-height: 1.5;
   }
-  .sell-image{
-    padding: 40px;
-    border-bottom: 1px solid #f5f5f5;
-    &__wrapper{
-      width: 620px;
-      &--subject{
-        font-size: 14px;
+  .sell-image {
+    padding: 4rem;
+    border-bottom: 0.1rem solid #f5f5f5;
+    &__wrapper {
+      width: 62rem;
+      &--subject {
+        font-size: 1.4rem;
         font-weight: bold;
       }
-      &--essential{
-        margin-left: 8px;
-        padding: 2px 4px;
-        border-radius: 2px;
+      &--essential {
+        margin-left: 0.8rem;
+        padding: 0.2rem 0.4rem;
+        border-radius: 0.2rem;
         color: #fff;
-        font-size: 12px;
+        font-size: 1.2rem;
         vertical-align: top;
         background: #ea352d;
         font-weight: bold;
         line-height: normal;
       }
-      &--caution{
-        font-size: 14px;
-        margin-top: 8px;
+      &--caution {
+        font-size: 1.4rem;
+        margin-top: 0.8rem;
         line-height: 1.5;
       }
-      .drop-area{
+      .drop-area {
         position: relative;
-        margin: 16px auto 0;
-        .dropzone{
+        margin: 1.6rem auto 0;
+        .dropzone {
           width: 100%;
-          min-height: 162px;
+          min-height: 16.2rem;
           background: #f5f5f5;
-          border: 1px dashed #ccc;
+          border: 0.1rem dashed #ccc;
           cursor: pointer;
         }
-        &__text{
+        &__text {
           position: absolute;
           top: 50%;
-          left: 16px;
-          right: 16px;
+          left: 1.6rem;
+          right: 1.6rem;
           text-align: center;
-          font-size: 14px;
+          font-size: 1.4rem;
           line-height: 1.5;
           -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
@@ -75,113 +75,113 @@
     }
   }
 
-  .sell-item{
-    padding: 0 40px 40px;
-    border-bottom: 1px solid #f5f5f5;
-    &__form{
-      margin: 40px 0 0;
-      &--subject{
-        font-size: 14px;
+  .sell-item {
+    padding: 0 4rem 4rem;
+    border-bottom: 0.1rem solid #f5f5f5;
+    &__form {
+      margin: 4rem 0 0;
+      &--subject {
+        font-size: 1.4rem;
         font-weight: bold;
       }
-      &--essential{
+      &--essential {
         @extend .sell-image__wrapper--essential;
       }
-      &--optional{
+      &--optional {
         @extend .sell-image__wrapper--essential;
         background: #ccc;
       }
-      &--name{
-        height: 48px;
+      &--name {
+        height: 4.8rem;
         width: 100%;
-        padding: 10px 16px 8px;
-        margin-top: 8px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
+        padding: 1rem 1.6rem 0.8rem;
+        margin-top: 0.8rem;
+        border-radius: 0.4rem;
+        border: 0.1rem solid #ccc;
         background: #fff;
         line-height: 1.5;
-        font-size: 16px;
+        font-size: 1.6rem;
         display: block;
       }
-      &--explain{
+      &--explain {
         display: block;
         width: 100%;
         max-width: 100%;
-        min-height: 104px;
-        padding: 10px;
-        border: 1px solid #ccc;
+        min-height: 10.4rem;
+        padding: 1rem;
+        border: 0.1rem solid #ccc;
         background: #fff;
-        font-size: 16px;
+        font-size: 1.6rem;
         line-height: 1.5;
-        margin-top: 8px;
+        margin-top: 0.8rem;
       }
-      &--size{
+      &--size {
         @extend .sell-item__form--name;
       }
-      &--brand{
+      &--brand {
         @extend .sell-item__form--name;
       }
     }
   }
 
-  .sell-select{
-    padding:40px;
-    border-bottom: 1px solid #f5f5f5;
+  .sell-select {
+    padding: 4rem;
+    border-bottom: 0.1rem solid #f5f5f5;
     overflow: auto;
-    &__title{
+    &__title {
       color: #888;
-      font-size: 14px;
+      font-size: 1.4rem;
       float: left;
       font-weight: bold;
     }
-    &__link{
+    &__link {
       display: inline-block;
-      width: 14px;
-      height: 14px;
+      width: 1.4rem;
+      height: 1.4rem;
       border-radius: 50%;
       background: #0099e8;
       color: #fff;
-      line-height: 14px;
-      font-size: 12px;
+      line-height: 1.4rem;
+      font-size: 1.2rem;
       text-align: center;
       text-decoration: none;
     }
-    &__group{
+    &__group {
       float: right;
-      width: 400px;
-      margin-top: 40px;
+      width: 40rem;
+      margin-top: 4rem;
       position: relative;
-      .select-subject{
-        font-size: 14px;
+      .select-subject {
+        font-size: 1.4rem;
         font-weight: bold;
       }
-      .select-essential{
+      .select-essential {
         @extend .sell-image__wrapper--essential;
       }
 
       .box-wrapper,
       .parent-wrapper,
       .children-wrapper,
-      .grandchildren-wrapper{
+      .grandchildren-wrapper {
         position: relative;
-        .select-box{
+        .select-box {
           @extend .sell-item__form--name;
           -webkit-appearance: none;
-          -moz-appearance: none; 
+          -moz-appearance: none;
           appearance: none;
         }
         #select-parent-category,
         #select-children-category,
-        #select-grandchildren-category{
+        #select-grandchildren-category {
           @extend .select-box;
         }
-        .select-arrow{
+        .select-arrow {
           position: absolute;
-          right: 16px;
+          right: 1.6rem;
           top: 50%;
           z-index: 2;
           color: #888;
-          font-size: 16px;
+          font-size: 1.6rem;
           -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
         }
@@ -189,130 +189,130 @@
     }
   }
 
-  .sell-price{
-    padding:40px;
-    border-bottom: 1px solid #f5f5f5;
+  .sell-price {
+    padding: 4rem;
+    border-bottom: 0.1rem solid #f5f5f5;
     overflow: auto;
-    &__title{
+    &__title {
       color: #888;
-      font-size: 14px;
+      font-size: 1.4rem;
       float: left;
       font-weight: bold;
     }
-    &__link{
+    &__link {
       @extend .sell-select__link;
     }
-    &__box{
+    &__box {
       float: right;
-      .price-form{
+      .price-form {
         list-style: none;
-        width: 400px;
+        width: 40rem;
         margin: 0;
-        &__input{
+        &__input {
           overflow: auto;
-          padding: 0 0 24px;
-          border-bottom: 1px solid #ccc;
-          &--left{
+          padding: 0 0 2.4rem;
+          border-bottom: 0.1rem solid #ccc;
+          &--left {
             float: left;
             width: 50%;
-            line-height: 48px;
-            .input-subject{
-              font-size: 14px;
+            line-height: 4.8rem;
+            .input-subject {
+              font-size: 1.4rem;
               font-weight: bold;
             }
-            .input-essential{
+            .input-essential {
               @extend .sell-image__wrapper--essential;
-              line-height: 48px;
+              line-height: 4.8rem;
             }
           }
-          &--right{
+          &--right {
             float: right;
             text-align: right;
             width: 50%;
-            .input-chara{
-              font-size: 12px;
+            .input-chara {
+              font-size: 1.2rem;
             }
-            .input-form{
+            .input-form {
               @extend .sell-item__form--name;
               display: inline-block;
               width: 80%;
               margin: 0 0 0 5%;
-              height: 48px;
-              font-size: 16px;
+              height: 4.8rem;
+              font-size: 1.6rem;
               text-align: right;
             }
           }
         }
-        &__fee{
+        &__fee {
           overflow: auto;
-          padding: 24px 0;
-          border-bottom: 1px solid #ccc;
-          font-size: 14px;
-          &--left{
+          padding: 2.4rem 0;
+          border-bottom: 0.1rem solid #ccc;
+          font-size: 1.4rem;
+          &--left {
             float: left;
-            .subject-fee{
+            .subject-fee {
             }
           }
-          &--right{
+          &--right {
             float: right;
-            .result-fee{
+            .result-fee {
             }
           }
         }
-        &__profit{
+        &__profit {
           overflow: auto;
-          padding: 24px 0;
-          font-size: 16px;
+          padding: 2.4rem 0;
+          font-size: 1.6rem;
           font-weight: bold;
-          &--left{
+          &--left {
             float: left;
-            .subject-profit{
+            .subject-profit {
             }
           }
-          &--right{
+          &--right {
             float: right;
-            .result-profit{
+            .result-profit {
             }
           }
         }
-      } 
+      }
     }
   }
-  .sell-send{
-    padding: 40px;
-    border-top: 1px solid #eee;
-    &__caution{
-      font-size: 14px;
-      &--link{
+  .sell-send {
+    padding: 4rem;
+    border-top: 0.1rem solid #eee;
+    &__caution {
+      font-size: 1.4rem;
+      &--link {
         color: #0099e8;
         text-decoration: none;
       }
     }
-    &__submit{
-      &--button{
+    &__submit {
+      &--button {
         background: #ea352d;
-        border: 1px solid #ea352d;
+        border: 0.1rem solid #ea352d;
         color: #fff;
         display: block;
         width: 100%;
-        line-height: 48px;
-        font-size: 14px;
-        border: 1px solid transparent;
-        -webkit-transition: all ease-out .3s;
-        transition: all ease-out .3s;
+        line-height: 4.8rem;
+        font-size: 1.4rem;
+        border: 0.1rem solid transparent;
+        -webkit-transition: all ease-out 0.3s;
+        transition: all ease-out 0.3s;
         cursor: pointer;
         text-align: center;
-        margin: 40px 0 0;
+        margin: 4rem 0 0;
       }
     }
-    &__back{
-      &--button{
-      @extend .sell-send__submit--button;
-      width: 45%;
-      margin: 24px auto 0;
-      background: #aaa;
-      border: 1px solid #aaa;
-      text-decoration: none;
+    &__back {
+      &--button {
+        @extend .sell-send__submit--button;
+        width: 45%;
+        margin: 2.4rem auto 0;
+        background: #aaa;
+        border: 0.1rem solid #aaa;
+        text-decoration: none;
       }
     }
   }
@@ -321,11 +321,11 @@
 .sell-item__form--name:focus,
 .sell-item__form--explain:focus,
 .sell-item__form--size:focus,
-.dropzone:focus{
+.dropzone:focus {
   outline: 0;
-  border-color: #0196E4;
+  border-color: #0196e4;
 }
 
-.sell-select__group:first-child{
+.sell-select__group:first-child {
   margin-top: 0;
 }
