--- a/app/assets/stylesheets/mypages/creditcard.scss
+++ b/app/assets/stylesheets/mypages/creditcard.scss
@@ -1,40 +1,40 @@
 .main-mypage {
   height: 100%;
-  width: 700px;
+  width: 70rem;
   box-sizing: border-box;
   background-color: black;
   float: right;
   background: #fff;
 }
-  .input-text_cardnum {
-    box-sizing: border-box;
-    padding-left: 15px;  
-  }
+.input-text_cardnum {
+  box-sizing: border-box;
+  padding-left: 1.5rem;
+}
 
 .creditcard_information-add {
   background-color: #fff;
-  padding: 64px;
+  padding: 6.4rem;
   .pay-way {
     background-color: #fff;
-    border-bottom: 1px solid #f5f5f5;
+    border-bottom: 0.1rem solid #f5f5f5;
     &__creditcard {
-      font-size: 16px;
+      font-size: 1.6rem;
       background-color: #fff;
-      margin-left: 135px;
+      margin-left: 13.5rem;
       font-weight: bold;
     }
     &__addcard {
-      height: 100px;
-      width: 300px;
+      height: 10rem;
+      width: 30rem;
       .add_credit {
         background-color: $red;
-        height: 54px;
-        width: 320px;
-        margin: 30px 0 40px 135px;
+        height: 5.4rem;
+        width: 32rem;
+        margin: 3rem 0 4rem 13.5rem;
         color: #fff;
-        font-size: 14px;
+        font-size: 1.4rem;
         .credit-icon {
-          margin-right: 10px;
+          margin-right: 1rem;
         }
       }
     }
@@ -43,19 +43,19 @@
 .creditcard_information-add {
   .pay-informartion {
     position: relative;
-    border-bottom: 1px solid #f5f5f5;
+    border-bottom: 0.1rem solid #f5f5f5;
     .pay-informartion__list {
-      margin-top: 20px;
+      margin-top: 2rem;
       .delete-btn {
         position: absolute;
-        top: 40px;
+        top: 4rem;
         right: 0px;
         color: $red;
-        border: 1px solid $red;
-        border-radius: 4px;
+        border: 0.1rem solid $red;
+        border-radius: 0.4rem;
         box-sizing: border-box;
-        padding: 5px;
-        font-size: 14px;
+        padding: 0.5rem;
+        font-size: 1.4rem;
       }
     }
   }
