--- a/app/assets/stylesheets/mypages/logout.scss
+++ b/app/assets/stylesheets/mypages/logout.scss
@@ -1,42 +1,43 @@
 * {
   padding: 0px;
   margin: 0px;
-  font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic,
+    メイリオ, Meiryo, sans-serif;
 }
 
-body{
+body {
   background-color: #f5f5f5;
 }
 
-.contents{
-  margin: 40px auto 0;
-  width: 1020px;
-  padding: 0 0 40px;
+.contents {
+  margin: 4rem auto 0;
+  width: 102rem;
+  padding: 0 0 4rem;
   overflow: auto;
-.logout{
-  height: 179px;
-  width: 700px;
-  box-sizing: border-box;
-  float: right;
-  background: #fff;
-  &__form{
-    border-top: 1px solid #f5f5f5;
-    padding: 64px;
-    max-width: 320px;
-    margin: auto;
-    height: 179px;
-    &--button{
-      cursor: pointer;
-      text-align: center;
-      display: inline-block;
-      width: 100%;
-      height: 50px;
-      line-height: 48px;
-      font-size: 14px;
-      background: #ea352d;
-      border: 1px solid #ea352d;
-      color: #fff;
+  .logout {
+    height: 18rem;
+    width: 70rem;
+    box-sizing: border-box;
+    float: right;
+    background: #fff;
+    &__form {
+      border-top: 0.1rem solid #f5f5f5;
+      padding: 6.4rem;
+      max-width: 32rem;
+      margin: auto;
+      height: 18rem;
+      &--button {
+        cursor: pointer;
+        text-align: center;
+        display: inline-block;
+        width: 100%;
+        height: 5rem;
+        line-height: 4.8rem;
+        font-size: 1.4rem;
+        background: #ea352d;
+        border: 0.1rem solid #ea352d;
+        color: #fff;
+      }
     }
-  }  
-}
+  }
 }
