--- a/app/assets/stylesheets/mypages/mypage.scss
+++ b/app/assets/stylesheets/mypages/mypage.scss
@@ -1,31 +1,31 @@
 body {
   background-color: #f5f5f5;
   .main {
-    height: 1250px;
-    width: 1020px;
-    margin: 40px auto 0;
+    height: 125rem;
+    width: 102rem;
+    margin: 4rem auto 0;
     .mypage-container {
-      height: 622px;
-      width: 700px;
+      height: 62.2rem;
+      width: 70rem;
       box-sizing: border-box;
       float: right;
       .mypage-header {
-        height: 200px;
-        width: 700px;
-        padding: 72px 16px 24px;
+        height: 20rem;
+        width: 70rem;
+        padding: 7.2rem 1.6rem 2.4rem;
         box-sizing: border-box;
         text-align: center;
         background-image: url(fmarket.jpg);
         background-position: 50% 45%;
         background-size: cover;
         &__image {
-          height: 60px;
-          width: 60px;
-          margin: 0, 320px;
+          height: 6rem;
+          width: 6rem;
+          margin: 0, 32rem;
           background-image: url(user.jpg);
           border-radius: 50%;
           display: inline-block;
-          vertical-align:middle;
+          vertical-align: middle;
           background-size: cover;
           background-repeat: no-repeat;
           background-position: 50% 10%;
@@ -33,20 +33,20 @@ body {
         &__name {
           @include mypage_name_chara;
           font-weight: bold;
-          margin-top: 8px;
+          margin-top: 0.8rem;
         }
         &__evaluation {
           @include mypage_name_chara;
-          display :inline-block;
+          display: inline-block;
         }
         &__evaluation-num {
           @extend .mypage-header__name;
-          margin-left: 8px;
-          display :inline-block;
+          margin-left: 0.8rem;
+          display: inline-block;
         }
         &__exhibit {
           @extend .mypage-header__evaluation;
-          margin-left: 8px;
+          margin-left: 0.8rem;
         }
         &__exhibit-num {
           @extend .mypage-header__evaluation-num;
@@ -55,72 +55,72 @@ body {
     }
 
     .purchased-product {
-      height: 72px;
+      height: 7.2rem;
       background-color: #fff;
-      margin-top: 40px;
-      padding: 0 16px;
-      font-size: 18px;
+      margin-top: 4rem;
+      padding: 0 1.6rem;
+      font-size: 1.8rem;
       font-weight: bold;
-      line-height: 72px;
+      line-height: 7.2rem;
     }
     .list-line {
       list-style: none;
-      font-size:0;
+      font-size: 0;
       display: flex;
       width: 100%;
-      height: 2px;
+      height: 0.2rem;
       box-sizing: border-box;
       list-style: none;
-      .active-line{
-        height: 2px;
+      .active-line {
+        height: 0.2rem;
         width: 50%;
         background-color: #ea532d;
-  }
-  .past-line {
-    @extend .active-line;
-    background-color: #EEE;
-  }
-}
-  .list {
-    height: 72px;
-    width: 100%;
-    font-size:0;
-    display: flex;
-    box-sizing: border-box;
-    list-style: none;
-    .active {
-      height: 72px;
-      width: 50%;
-      font-size: 18px;
-      font-weight: bold;
-      background-color: #fff;
-      text-align: center;
-      line-height: 72px;
-      list-style: none;
-              }
-    .past {
-      height: 72px;
-      width: 50%;
-      font-size: 18px;
-      font-weight: bold;
-      background-color: #EEE;
-      text-align: center;
-      line-height: 72px;
+      }
+      .past-line {
+        @extend .active-line;
+        background-color: #eee;
+      }
     }
-  }
+    .list {
+      height: 7.2rem;
+      width: 100%;
+      font-size: 0;
+      display: flex;
+      box-sizing: border-box;
+      list-style: none;
+      .active {
+        height: 7.2rem;
+        width: 50%;
+        font-size: 1.8rem;
+        font-weight: bold;
+        background-color: #fff;
+        text-align: center;
+        line-height: 7.2rem;
+        list-style: none;
+      }
+      .past {
+        height: 7.2rem;
+        width: 50%;
+        font-size: 1.8rem;
+        font-weight: bold;
+        background-color: #eee;
+        text-align: center;
+        line-height: 7.2rem;
+      }
+    }
     .report-areas {
-      height: 235px;
-      width: 700px;
-      font-size: 18px;
+      height: 23.5rem;
+      width: 70rem;
+      font-size: 1.8rem;
       font-weight: bold;
       color: #808080;
       background-color: #fff;
       background-image: url("logo_gray");
       background-size: 50% 50%;
-      background-repeat:no-repeat;
-      background-position:50%;
+      background-repeat: no-repeat;
+      background-position: 50%;
       text-align: center;
-      line-height: 390px;
+      line-height: 39rem;
       list-style: none;
     }
     .report-area-todo {
@@ -131,18 +131,11 @@ body {
       display: block;
     }
     .gray-logo {
-      height: 100px;
-      width: 100px;
+      height: 10rem;
+      width: 10rem;
     }
     .report-area__sentence {
-      margin-top: 10px;
+      margin-top: 1rem;
     }
   }
-  .side-bar {
-    height: 1250px;
-    width: 280px;
-    background-color: lightgoldenrodyellow;
-    float: left;
-  }
 }
-
