--- a/app/assets/stylesheets/mypages/sidebar.scss
+++ b/app/assets/stylesheets/mypages/sidebar.scss
@@ -1,57 +1,56 @@
-.sidebar{
-  width: 280px;
+.sidebar {
+  width: 28rem;
   background-color: lightgoldenrodyellow;
-  margin-right:40px ;
-  float: left;
+  margin-right: 4rem;
   background: #fff;
-  &__list{
-    .menu{
-      &__item{
+  &__list {
+    .menu {
+      &__item {
         list-style: none;
-        &--link{
+        &--link {
           position: relative;
-          padding: 16px;
-          border-top: 1px solid #eee;
+          padding: 1.6rem;
+          border-top: 0.1rem solid #eee;
           display: block;
           background: #fff;
-          font-size: 14px;
+          font-size: 1.4rem;
           color: #333;
-          text-decoration:none;
+          text-decoration: none;
         }
-        &--link:hover{
-            background-color: #eee;
-            opacity: 0.8;
+        &--link:hover {
+          background-color: #eee;
+          opacity: 0.8;
         }
-        &--arrow{
+        &--arrow {
           position: absolute;
           top: 50%;
-          right: 16px;
+          right: 1.6rem;
           color: #ccc;
           transform: translate(0, -50%);
-          transition: all ease-out .2s;
+          transition: all ease-out 0.2s;
           font-style: normal;
-          font-size: 16px;
+          font-size: 1.6rem;
         }
       }
     }
 
-    .navi-head{
+    .navi-head {
       background-color: #f5f5f5;
-      padding: 40px 0 5px;
-      font-size: 16px;
+      padding: 4rem 0 0.5rem;
+      font-size: 1.6rem;
       font-weight: bold;
     }
 
-    .config{
-      &__item{
+    .config {
+      &__item {
         list-style: none;
-        &--link{
+        &--link {
           @extend .menu__item--link;
         }
-        &--arrow{
+        &--arrow {
           @extend .menu__item--arrow;
         }
       }
-    } 
+    }
   }
 }
