--- a/app/assets/stylesheets/signups/header.scss
+++ b/app/assets/stylesheets/signups/header.scss
@@ -1,20 +1,26 @@
 .header-signup {
-  height: 128px;
+  height: 12.8rem;
+  width: 100%;
   background-color: #f5f5f5;
   display: flex;
   justify-content: center; /* 子要素をflexboxにより中央に配置する */
   &__left {
     display: inline-block;
+    padding-top: 4rem;
+
+    .header-signup__left--logo {
+      width: 16rem;
+    }
   }
   &__right {
     display: inline-block;
-    padding: 40px 0 0 44px;
+    padding: 4rem 0 0 4.4rem;
     .step-bar {
       display: flex;
-      font-size: 12px;
+      font-size: 1.2rem;
       &__block {
         display: inline-block;
-        margin-right: 40px;
+        margin-right: 4rem;
         position: relative;
         z-index: 1;
         .point1 {
@@ -37,6 +43,9 @@
         }
         .point5 {
           @include inpoint;
+          &::before {
+            @include before;
+          }
         }
       }
     }
@@ -47,7 +56,7 @@
   padding: 0px;
   margin: 0px;
   .header {
-    height: 128px;
+    height: 12.8rem;
     background-color: #f5f5f5;
     display: flex;
     justify-content: center; /* 子要素をflexboxにより中央に配置する */
@@ -56,41 +65,41 @@
     }
     &__right {
       display: inline-block;
-      padding: 40px 0 0 44px;
+      padding: 4rem 0 0 4.4rem;
       .step-bar {
         display: flex;
-        font-size: 12px;
+        font-size: 1.2rem;
         &__block {
           display: inline-block;
-          margin-right: 40px;
+          margin-right: 4rem;
           position: relative;
           @mixin inpoint {
             background-color: #ccc;
-            height: 12px;
-            width: 12px;
+            height: 1.2rem;
+            width: 1.2rem;
             border-radius: 50%;
             display: block;
-            margin: 8px auto;
+            margin: 0.8rem auto;
           }
           @mixin after {
             position: absolute;
-            bottom: 13px;
+            bottom: 1.3rem;
             z-index: -1;
             display: block;
             content: "";
             width: 100%;
-            height: 2px;
+            height: 0.2rem;
             background: #ccc;
             left: 50%;
           }
           @mixin before {
             position: absolute;
-            bottom: 13px;
+            bottom: 1.3rem;
             z-index: -1;
             display: block;
             content: "";
             width: 100%;
-            height: 2px;
+            height: 0.2rem;
             background: #ccc;
             right: 50%;
           }
