--- a/app/assets/stylesheets/signups/step1.scss
+++ b/app/assets/stylesheets/signups/step1.scss
@@ -1,71 +1,69 @@
-.user_nickname,
-.user_email,
-.user_password
-{
-  height: 48px;
-  width: 330px;
-  padding: 10px 16px 8px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background: #fff;
-  line-height: 1.5;
-  font-size: 16px;
-}
-
-.user_nickname_error,
-.user_email_error,
-.user_password_error
-{
-  height: 48px;
-  width: 330px;
-  padding: 10px 16px 8px;
-  border-radius: 4px;
-  border: 1px solid red;
-  background: #fff;
-  line-height: 1.5;
-  font-size: 16px;
-}
 .single-main {
-  background-color:rgb(245, 245, 245);
-  display: block;
+  background-color: rgb(245, 245, 245);
+  width: 100%;
   background-repeat: no-repeat;
-  margin: 0;
   padding: 0;
 }
 .l-single-container {
   background-color: #fff;
-  width: 700px;
-  margin-left: 363px;
+  width: 70rem;
+  margin: auto;
 }
 .l-single-inner_registration {
-  border-bottom: 1px rgb(245, 245, 245) solid;
-  padding: 32px;
-  font-size: 22px;
+  border-bottom: 0.1rem rgb(245, 245, 245) solid;
+  padding: 3.2rem;
+  font-size: 2.2rem;
 }
 
 .user_information {
-  margin-left: 188px;
-  margin-right: 188px;
+  margin-left: 18.8rem;
+  margin-right: 18.8rem;
 }
 h2 {
   text-align: center;
 }
 
 .field {
-  line-height: 50px;
+  line-height: 5rem;
 }
 .min {
   background-color: red;
-  margin: 0 0 0 8px;
-  padding: 2px 4px;
-  border-radius: 2px;
+  margin: 0 0 0 0.8rem;
+  padding: 0.2rem 0.4rem;
+  border-radius: 0.2rem;
   color: #fff;
-  font-size: 12px;
+  font-size: 1.2rem;
   vertical-align: top;
 }
 
-.field-input_errors{
+.field-input_errors {
   display: flex;
+}
+
+.user_nickname,
+.user_email,
+.user_password {
+  height: 4.8rem;
+  width: 33rem;
+  padding: 1rem 1.6rem 0.8rem;
+  border-radius: 0.4rem;
+  border: 0.1rem solid #ccc;
+  background: #fff;
+  line-height: 1.5;
+  font-size: 1.6rem;
+}
+
+.user_nickname_error,
+.user_email_error,
+.user_password_error {
+  height: 4.8rem;
+  width: 33rem;
+  padding: 1rem 1.6rem 0.8rem;
+  border-radius: 0.4rem;
+  border: 0.1rem solid red;
+  background: #fff;
+  line-height: 1.5;
+  font-size: 1.6rem;
 }
 
 .label_nickname,
@@ -73,170 +71,161 @@ h2 {
 .label_password,
 .label_name,
 .label_namekana,
-.label_birthday
-{
-  font-size: 13px;
+.label_birthday {
+  font-size: 1.3rem;
   font-weight: bold;
 }
 .confirm_title {
-  margin-bottom: -10px;
+  margin-bottom: -1rem;
 }
 .confirm_message {
-  margin-top: 5px;
-  font-size: 13px;
-  line-height: 18px;
+  margin-top: 0.5rem;
+  font-size: 1.3rem;
+  line-height: 1.8rem;
 }
 
 .field_checkbox {
-  margin: 0px 0 -15px 0;
+  margin: 0 0 -1.5rem 0;
   display: flex;
 }
 .checkbox {
-  width: 30px;
-  margin-top: 18px;
+  width: 3rem;
+  margin-top: 1.8rem;
 }
 
 .check_password {
+  font-size: 1.5rem;
   display: inline;
 }
 
 #user_lastname,
 #user_firstname,
 #user_lastname_kana,
-#user_firstname_kana
-{
-  height: 48px;
-  width: 160px;
-  padding: 10px 16px 8px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
+#user_firstname_kana {
+  height: 4.8rem;
+  width: 16rem;
+  padding: 1rem 1.6rem 0.8rem;
+  border-radius: 0.4rem;
+  border: 0.1rem solid #ccc;
   background: #fff;
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 #user_firstname_kana,
-#user_firstname
-{
-  margin-left: 10px;
+#user_firstname {
+  margin-left: 1rem;
 }
 
 #user_lastname_error,
 #user_firstname_error,
 #user_lastname_kana_error,
-#user_firstname_kana_error
-{
-  height: 48px;
-  width: 160px;
-  padding: 10px 16px 8px;
-  border-radius: 4px;
-  border: 1px solid red;
+#user_firstname_kana_error {
+  height: 4.8rem;
+  width: 16rem;
+  padding: 1rem 1.6rem 0.8rem;
+  border-radius: 0.4rem;
+  border: 0.1rem solid red;
   background: #fff;
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 #user_firstname_kana_error,
-#user_firstname_error
-{
-  margin-left: 10px;
+#user_firstname_error {
+  margin-left: 1rem;
 }
 
 #user_birthday_year::-ms-expand,
 #user_birthday_month::-ms-expand,
-#user_birthday_day::-ms-expand{
+#user_birthday_day::-ms-expand {
   display: none;
 }
 
 #user_birthday_year_error::-ms-expand,
 #user_birthday_month_error::-ms-expand,
-#user_birthday_day_error::-ms-expand{
+#user_birthday_day_error::-ms-expand {
   display: none;
 }
 
 #user_birthday_year,
 #user_birthday_month,
-#user_birthday_day 
-{
+#user_birthday_day {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   line-height: 1.1em;
-  padding: 7px 20px 7px 10px;
-  height: 45px;
-  width: 70px;
-  font-size: 16px;
-  margin-right: -23px;
+  padding: 0.7rem 2rem 0.7rem 1rem;
+  height: 4.5rem;
+  width: 7rem;
+  font-size: 1.6rem;
+  margin-right: -2.3rem;
   overflow: hidden;
-
 }
 
 #user_birthday_year_error,
 #user_birthday_month_error,
-#user_birthday_day_error
-{
+#user_birthday_day_error {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   line-height: 1.1em;
-  padding: 7px 20px 7px 10px;
-  height: 45px;
-  width: 70px;
-  font-size: 16px;
-  margin-right: -23px;
+  padding: 0.7rem 2rem 0.7rem 1rem;
+  height: 4.5rem;
+  width: 7rem;
+  font-size: 1.6rem;
+  margin-right: -2.3rem;
   overflow: hidden;
-  border: 1px solid red;
+  border: 0.1rem solid red;
 }
 
-#recaptcha_error{
-  border: 1px solid red;
+#recaptcha_error {
+  border: 0.1rem solid red;
 }
 
 #user_birthday_year:after,
 #user_birthday_month:after,
-#user_birthday_day:after
-{
+#user_birthday_day:after {
   position: absolute;
 }
 
 #user_birthday_year_error:after,
 #user_birthday_month_error:after,
-#user_birthday_day_error:after
-{
+#user_birthday_day_error:after {
   position: absolute;
 }
 
 .fa-angle-down {
-  padding-right: 4px;
+  padding-right: 0.4rem;
   pointer-events: none;
 }
 
-.registration_message{
-  margin: 8px 0 25px 0;
+.registration_message {
+  margin: 0.8rem 0 2.5rem 0;
 }
 
 .regime {
   color: gray;
-  font-size: 13px;
+  font-size: 1.3rem;
 }
 
-.terms_of_service_messages{
-  margin: 20px 0 50px 0;
-  &__content{
-    font-size: 13px;
+.terms_of_service_messages {
+  margin: 2rem 0 5rem 0;
+  &__content {
+    font-size: 1.3rem;
     text-align: center;
   }
 }
 .next_submit {
   background-color: rgb(234, 53, 45);
   color: #fff;
-  height: 52px;
-  width: 325px;
-  margin-bottom: 80px;
+  height: 5.2rem;
+  width: 32.5rem;
+  margin-bottom: 8rem;
 }
 
 .destory_wall {
   background-color: #fff;
-  height: 1px;
+  height: 0.1rem;
   width: 100%;
 }
