--- a/app/assets/stylesheets/variables/mixins.scss
+++ b/app/assets/stylesheets/variables/mixins.scss
@@ -1,48 +1,48 @@
 @mixin mypage_name_chara {
   color: #fff;
-  font-size: 14px;
-  text-shadow: 1px 2px 3px #333;
+  font-size: 1.4rem;
+  text-shadow: 0.1rem 0.2rem 0.3rem #333;
 }
 
 @mixin inpoint {
   background-color: #ccc;
-  height: 12px;
-  width: 12px;
+  height: 1.2rem;
+  width: 1.2rem;
   border-radius: 50%;
   display: block;
-  margin: 8px auto;
+  margin: 0.8rem auto;
 }
 @mixin after {
   position: absolute;
   z-index: -1;
-  bottom: 13px;
+  bottom: 1.3rem;
   display: block;
-  content: '';
+  content: "";
   width: 100%;
-  height: 2px;
+  height: 0.2rem;
   background: #ccc;
   left: 50%;
 }
 @mixin before {
   position: absolute;
-  bottom: 13px;
+  bottom: 1.3rem;
   z-index: -1;
   display: block;
-  content: '';
+  content: "";
   width: 100%;
-  height: 2px;
+  height: 0.2rem;
   background: #ccc;
   right: 50%;
 }
 
 @mixin address_select {
-  height: 58px;
-  width: 500px;
-  padding: 10px 16px 8px;
-  margin: 5px;
-  border: 1px solid #ccc;
+  height: 5.8rem;
+  width: 50rem;
+  padding: 1rem 1.6rem 0.8rem;
+  margin: 0.5rem;
+  border: 0.1rem solid #ccc;
   background: #fff;
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 1.6rem;
   display: block;
 }
