--- a/app/views/signups/index.html.haml
+++ b/app/views/signups/index.html.haml
@@ -2,7 +2,8 @@
     .single-container
 
         %header.single-header
-            .header-logo
+            = link_to root_path do
+                .header-logo
 
         .single-main
             .login2-panel
